# slurm_email_notifs

./: .gitignore  README.md  pyproject.toml  slurm_template.sh
src/slurm_email_notifs/: __init__.py  main.py  notifier.py
